# RayTracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
src/: App.cpp  App.h  App.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Cameras.hpp  Color.hpp  Colors.hpp  Files.cpp  Files.hpp  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer.hpp  FrameBuffers.hpp  LightIncidence.cpp  LightIncidence.hpp  Lights.cpp  Lights.h  Lights.hpp  Main.cpp  Material.cpp  Material.hpp  Math.hpp  Objects.cpp  Objects.h  Objects.hpp  Presets.hpp  Ray.hpp  RayTracer.cpp  RayTracer.h  RayTracer.hpp  Rays.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneObjects.cpp  SceneObjects.h  SceneObjects.hpp  (+7 more)
tests/: CMakeLists.txt  LightIncidence_test.cpp  Objects_test.cpp  RayTracer_test.cpp
